--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "accept-language": "^3.0.18",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-chained-backend": "^4.5.0",
+    "i18next-http-backend": "^2.2.2",
+    "i18next-localstorage-backend": "^4.2.0",
+    "i18next-locize-backend": "^6.2.3",
     "next": "latest",
+    "next-i18next": "^14.0.3",
     "react": "latest",
-    "react-dom": "latest"
+    "react-cookie": "^6.1.1",
+    "react-dom": "latest",
+    "react-i18next": "^13.2.2"
   },
   "devDependencies": {
     "@types/node": "latest",
