--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "i18next-http-backend": "^2.2.2",
     "i18next-localstorage-backend": "^4.2.0",
     "i18next-locize-backend": "^6.2.3",
+    "install": "^0.13.0",
     "next": "latest",
     "next-i18next": "^14.0.3",
+    "npm": "^10.2.1",
     "react": "latest",
     "react-cookie": "^6.1.1",
     "react-dom": "latest",
