--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "install": "^0.13.0",
     "next": "latest",
     "next-i18next": "^14.0.3",
+    "next-qrcode": "^2.5.1",
     "npm": "^10.2.1",
     "react": "latest",
     "react-cookie": "^6.1.1",
