fixes and robots.txt

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
