--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next-http-backend": "^2.2.2",
     "i18next-localstorage-backend": "^4.2.0",
     "i18next-locize-backend": "^6.2.3",
+    "i18next-resources-to-backend": "^1.2.0",
     "install": "^0.13.0",
     "next": "latest",
     "next-i18next": "^14.0.3",
